--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,4 +31,6 @@
             // }
         }
     }
+    ,
+    "postCreateCommand": "echo '# Writing code upon codespace creation!'  >> codespace.md"
 }
